--- a/templates/photo.html
+++ b/templates/photo.html
@@ -1,6 +1,10 @@
 
-<div class = "caption"> </div>
-<a href="<%= native_link %>" target="_blank"><img src="<%= src_link %>"/></a>
+<div class="card">
+	<a href="<%= native_link %>" target="_blank"><img height="280px" width="280px" src="<%= src_link %>"/></a>
+	<p class="card-text"></p>
+</div>
+
+
 
 
 
