create video template, pagination of photo collection

--- a/templates/photo.html
+++ b/templates/photo.html
@@ -1,7 +1,7 @@
 
 <div class="card">
 	<a href="<%= native_link %>" target="_blank"><img height="280px" width="280px" src="<%= src_link %>"/></a>
-	<p class="card-text"></p>
+	<p class="card-text">posted by: <%= username %></p>
 </div>
 
 
