--- a/templates/gallery_new.html
+++ b/templates/gallery_new.html
@@ -1,31 +1,52 @@
-<form class='form-inline'>
-  <fieldset class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
 
 
-	<div class="container">
-	    <div class='col-md-5'>
-	        <div class="form-group">
-	            <div class='input-group date' id='datetimepicker6'>
-	                <input type='text' class="form-control" />
-	                <span class="input-group-addon">
-	                    <span class="glyphicon glyphicon-calendar"></span>
-	                </span>
-	            </div>
-	        </div>
-	    </div>
-	    <div class='col-md-5'>
-	        <div class="form-group">
-	            <div class='input-group date' id='datetimepicker7'>
-	                <input type='text' class="form-control" />
-	                <span class="input-group-addon">
-	                    <span class="glyphicon glyphicon-calendar"></span>
-	                </span>
-	            </div>
-	        </div>
-	    </div>
-	</div>
-	  </fieldset>
+ 		<div class="row">
+			<div class="form-group col-xs-3 col-md-3">
+	        	<label for="tag" class="control-label">Hashtag</label>
+				
+			 </div>
 
-</form>
+		    <div class="form-group col-xs-3 col-md-3">
+		        <label for="name" class="control-label">Start Date</label>
+
+			</div> 
+			<div class="form-group col-xs-3 col-md-3">
+		        <label for="name" class="control-label">End Date</label>
+	   
+			</div>
+			<div class="form-group col-xs-3 col-md-3"></div>
+		</div>
+		<div class="row">
+		    <div class="form-group col-xs-3 col-md-3">
+		       
+				<input type=text class="form-control"name="tag" placeholder="Hashtag"/> 
+				
+			</div> 
+
+		    <div class="form-group col-xs-3 col-md-3">
+		       
+				<input type=date class="form-control"name="start_day" placeholder="mm/dd/yy"/> 
+				<input type=time  class="form-control"name="start_time" placeholder="--:-- --"/>
+			</div> 
+			<div class="form-group col-xs-3 col-md-3">
+
+	       		<input type=date class="form-control"name="end_day" placeholder="mm/dd/yy"/> 
+				<input type=time class="form-control" name="end_time" placeholder="--:-- --"/> 
+			</div>
+			<div class="form-group col-xs-3 col-md-3">
+
+	       		<button  id="create-gallery" class="btn btn-primary submit"> Create Gallery </button>
+			</div>
+		
+		</div>
+
+
+
+
+
+
+
+
+
+
+
