--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,2 +1,2 @@
-<button class="prev">Prev Page</button>
-<button class="next">Next Page</button>
+<button class="prev btn btn-default">Prev Page</button>
+<button class="next btn btn-default">Next Page</button>
